k8s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-canary
  namespace: services
spec:
  type: ClusterIP
  selector:
    app: order-service
    version: canary               
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
