k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-service-route
  namespace: services
spec:
  parentRefs:
  - name: order-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/tutorials

    backendRefs:
    - name: order-service
      port: 8080
      weight: 90

    - name: order-service-canary
      port: 8080
      weight: 10
